# ginac-problem

./: .gitmodules  CMakeLists.txt  README.md
